tests/fixtures/invalid/float_in_float.py
# Cannot use 'in' with Float and Float
x: bool = 1.0 in 1.0
